--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="Content-Security-Policy" content="default-src 'self'; connect-src wss://*; img-src https://* data:;" />
 		<title>Nostr DM</title>
-		<link rel="stylesheet" href="main.css" />
-		<script src="main.js" defer></script>
 	</head>
 	<body>
 		<div id="container">
@@ -62,5 +59,6 @@
 				<dl id="dm"></dl>
 			</fieldset>
 		</div>
+		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
